# functional-gpt

./: README.md  pyproject.toml
fgpt/: cli.py
fgpt/functions/: __init__.py  air_quality.py  weather.py
fgpt/models/: chat.py
